--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+            <version>42.2.12</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
