--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,7 +14,9 @@ on:
   pull_request:
     branches: [ "master" ]
 
-permissions: read|write
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
   build:
