--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,15 @@
     <groupId>com.busify</groupId>
     <artifactId>BusifyAppProject</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>BusifyAppProject</name>
     <description>Demo project for Spring Boot</description>
+    <modules>
+        <module>busify-domain</module>
+        <module>busify-app</module>
+        <module>busify-web</module>
+        <module>busify-service</module>
+    </modules>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -49,18 +56,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
