/getFutureTicketsForUser - Added OpenAPI code generation - Added flow for getting all the future tickets for a given user id

--- a/busify-app/pom.xml
+++ b/busify-app/pom.xml
@@ -17,6 +17,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.busify</groupId>
+            <artifactId>busify-messages</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.busify</groupId>
+            <artifactId>busify-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
