--- a/busify-domain/src/main/resources/application.properties
+++ b/busify-domain/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=postgres
+spring.datasource.password=sa
 spring.datasource.driver-class-name=org.postgresql.Driver
+server.port = 8070
